--- a/compiling_nn/odd_pyeda.ipynb
+++ b/compiling_nn/odd_pyeda.ipynb
@@ -10,6 +10,7 @@
     "import time\n",
     "import signal\n",
     "import itertools\n",
+    "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.autograd import Function\n",
@@ -18,6 +19,7 @@
     "from tqdm.notebook import trange\n",
     "from graphviz import Digraph, Source\n",
     "from IPython.display import SVG, HTML, display\n",
+    "from pprint import pprint\n",
     "\n",
     "infty = float('inf')"
    ]
@@ -496,6 +498,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "converting to ODDs : DONE (5.31e-02)\n",
+      "combining ODDs : DONE (3.69e-06)\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers_nn = [15,1]\n",
+    "\n",
+    "net = layers2nn(layers_nn)\n",
+    "bdd, bdd_vars = compile_nn(net, verbose=True)\n",
+    "if layers_nn[0] < 10:\n",
+    "    display(Source(bdd.to_dot()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Approx BDD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n",
+      "142\n"
+     ]
+    }
+   ],
+   "source": [
+    "def l(cmax, node):\n",
+    "    return node.root if node.root > 0 else cmax+1\n",
+    "\n",
+    "memo_zp = dict()\n",
+    "def zp(node, label):\n",
+    "    a = memo_zp.get(node)\n",
+    "    if a:\n",
+    "        return a.get(label)\n",
+    "    return None\n",
+    "\n",
+    "# pre compute zp by bottom-up algorithm\n",
+    "def compute_zp(bdd, c):\n",
+    "    for x in bdd.dfs_postorder():\n",
+    "        if x.root < 0: # if leaf (0/1)\n",
+    "            memo_zp[x] = dict()\n",
+    "            continue\n",
+    "        memo_zp[x] = {**memo_zp[x.lo], l(c, x.lo): x.lo}\n",
+    "\n",
+    "def init_find_incl(bdd, c):\n",
+    "    R = []\n",
+    "    nodes = {k:[] for k in range(1,c+2)}\n",
+    "    for x in bdd.dfs_preorder():\n",
+    "        R.append((x,x))\n",
+    "        if x.root > 0:\n",
+    "            nodes[x.root].append(x)\n",
+    "        else:\n",
+    "            nodes[c+1].append(x)\n",
+    "    R.append((nodes[c+1][0], nodes[c+1][1]) if nodes[c+1][0] == -2 else (nodes[c+1][1], nodes[c+1][0]))\n",
+    "\n",
+    "    return nodes, R\n",
+    "\n",
+    "def find_incl(bdd, c):\n",
+    "    nodes, R = init_find_incl(bdd, c)\n",
+    "    print(len(R))\n",
+    "    for k in range(c, 0, -1):\n",
+    "        for u,v in itertools.combinations(nodes[k], 2):\n",
+    "            if (u.lo, zp(v.lo, l(c, u.lo))) in R and (u.hi, zp(v.hi, l(c, u.hi))) in R:\n",
+    "                R.append((u,v))\n",
+    "            if (v.lo, zp(u.lo, l(c, v.lo))) in R and (v.hi, zp(u.hi, l(c, v.hi))) in R:\n",
+    "                R.append((v, u))\n",
+    "\n",
+    "    print(len(R)) \n",
+    "\n",
+    "compute_zp(bdd, len(bdd_vars))\n",
+    "find_incl(bdd,len(bdd_vars))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Monotone"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -503,17 +611,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converting to ODDs : DONE (2.12e+02)\n",
-      "combining ODDs : DONE (2.26e+01)\n"
+      "None 2 2\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "<pyeda.boolalg.bdd.BDDNode object at 0x7f38e6332920>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 68\u001b[0m\n\u001b[1;32m     66\u001b[0m compute_F(bdd)\n\u001b[1;32m     67\u001b[0m compute_zp(bdd_mono, \u001b[38;5;28mlen\u001b[39m(bdd_vars_mono))\n\u001b[0;32m---> 68\u001b[0m \u001b[43mfind_incl_mono\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbdd_mono\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbdd_vars_mono\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[12], line 63\u001b[0m, in \u001b[0;36mfind_incl_mono\u001b[0;34m(bdd, c)\u001b[0m\n\u001b[1;32m     60\u001b[0m         candidates\u001b[38;5;241m.\u001b[39madd(zp_q1) \u001b[38;5;66;03m# zp_q1 can be None\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m candidates: \n\u001b[0;32m---> 63\u001b[0m     sup[u] \u001b[38;5;241m=\u001b[39m argmin([F(v) \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m candidates])\n",
+      "Cell \u001b[0;32mIn[12], line 63\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     60\u001b[0m         candidates\u001b[38;5;241m.\u001b[39madd(zp_q1) \u001b[38;5;66;03m# zp_q1 can be None\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m candidates: \n\u001b[0;32m---> 63\u001b[0m     sup[u] \u001b[38;5;241m=\u001b[39m argmin([\u001b[43mF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mv\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m candidates])\n",
+      "Cell \u001b[0;32mIn[12], line 24\u001b[0m, in \u001b[0;36mF\u001b[0;34m(v)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mF\u001b[39m(v):\n\u001b[0;32m---> 24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmemo_F\u001b[49m\u001b[43m[\u001b[49m\u001b[43mv\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mKeyError\u001b[0m: <pyeda.boolalg.bdd.BDDNode object at 0x7f38e6332920>"
      ]
     }
    ],
    "source": [
-    "layers_nn = [25,3,1]\n",
+    "net_mono = layers2nn(layers_nn)\n",
+    "for i, params in enumerate(net_mono.parameters()):\n",
+    "    if i%2==0:\n",
+    "        params.data = abs(params.data)\n",
+    "    else:\n",
+    "        params.data = -10 * abs(params.data)\n",
     "\n",
-    "net = layers2nn(layers_nn)\n",
-    "bdd, bdd_vars = compile_nn(net, verbose=True)\n",
-    "# display(Source(bdd.to_dot()))"
+    "bdd_mono, bdd_vars_mono = compile_nn(net_mono)\n",
+    "if bdd_mono.is_one() or bdd_mono.is_zero():\n",
+    "    print(\"BDD is 0 or 1\")\n",
+    "    sys.exit(0)\n",
+    "\n",
+    "memo_F = dict()\n",
+    "def compute_F(bdd): # ZDD algo -> adapt to BDD (?)\n",
+    "    for x in bdd.dfs_postorder():\n",
+    "        if x.root > 0:\n",
+    "            memo_F[x] = {frozenset(S | {x.root}) for S in memo_F[x.hi]} | memo_F[x.lo]\n",
+    "        elif x.root == -2: # case True\n",
+    "            memo_F[x] = {frozenset()}\n",
+    "        elif x.root == -1: # case False\n",
+    "            memo_F[x] = set()\n",
+    "\n",
+    "def F(v):\n",
+    "    return memo_F[v]\n",
+    "\n",
+    "def argmin(a):\n",
+    "    return min(range(len(a)), key=lambda x : a[x])\n",
+    "\n",
+    "def find_incl_mono(bdd, c):\n",
+    "    special_nodes = set(memo_zp[bdd.node].values()) # nodes reached by 0-edge from the root\n",
+    "    nodes, R = init_find_incl(bdd, c)\n",
+    "    nodes[0] = dict() # simplify code for P0 and P1\n",
+    "    sup = R # init sup (???)\n",
+    "\n",
+    "    for k in range(1, c+1):\n",
+    "        for u in set(nodes[k]) - special_nodes:\n",
+    "            candidates = set()\n",
+    "            P0 = {v for v in nodes[k-1] if v.lo is u}\n",
+    "            P1 = {v for v in nodes[k-1] if v.hi is u}\n",
+    "\n",
+    "            for p in P0 | P1:\n",
+    "                q = p\n",
+    "                while u is zp(q, l(c, u)):\n",
+    "                    q = sup[q]\n",
+    "                zp_q = zp(q, l(c, u))\n",
+    "                if zp_q is None:\n",
+    "                    print(\"zp_q\")\n",
+    "                    sys.exit()\n",
+    "                candidates.add(zp_q) # zp can return None\n",
+    "\n",
+    "            for p in P1:\n",
+    "                q = p\n",
+    "                # /!\\ q1 is q.hi ??? l(q) can be equal to l(u) -> zp(q, l(q)) = None /!\\\n",
+    "                zp_q1 = zp(q.hi, l(c, u))\n",
+    "                print(zp_q1, q.hi.root, l(c,u))\n",
+    "                while u is zp_q1  and q not in special_nodes:\n",
+    "                    q = sup[q]\n",
+    "                    zp_q1 = zp(q.hi, l(c, u))\n",
+    "                if u is not zp_q1:\n",
+    "                    candidates.add(zp_q1) # zp_q1 can be None\n",
+    "            \n",
+    "            if candidates: \n",
+    "                sup[u] = argmin([F(v) for v in candidates]) # KeyError if None in candidates\n",
+    "            \n",
+    "memo_zp.clear()\n",
+    "compute_F(bdd)\n",
+    "compute_zp(bdd_mono, len(bdd_vars_mono))\n",
+    "find_incl_mono(bdd_mono, len(bdd_vars_mono))"
    ]
   }
  ],
