--- a/compiling_nn/odd_pyeda.ipynb
+++ b/compiling_nn/odd_pyeda.ipynb
@@ -505,8 +505,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converting to ODDs : DONE (1.07e-01)\n",
-      "combining ODDs : DONE (4.05e-06)\n"
+      "converting to ODDs : DONE (2.02e-01)\n",
+      "combining ODDs : DONE (2.66e-06)\n"
      ]
     }
    ],
@@ -542,8 +542,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "225\n",
-      "259\n"
+      "428\n",
+      "432\n"
      ]
     }
    ],
@@ -604,48 +604,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90> 2 2 {}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40> 3 3 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0> 4 4 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20> 5 5 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a380> 5 5 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9d0> 5 5 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a380>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3191b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b220> 6 6 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a380>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3191b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330> 6 6 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a380>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3191b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b220>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31acb0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319ae0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319d20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f3349364a00> 7 7 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a380>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3191b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b220>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31acb0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319ae0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319d20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319b40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31acb0>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334a319870> 7 7 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a380>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3191b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b220>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31acb0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319ae0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319d20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319b40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31acb0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364a00>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319060>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>}\n",
-      "<pyeda.boolalg.bdd.BDDNode object at 0x7f334936f490> 8 8 {<pyeda.boolalg.bdd.BDDNode object at 0x7f334a291c90>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b1f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318f40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2925c0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319810>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31aaa0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3198d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2908e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a830>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a290b20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31a380>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a3191b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9d0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b9a0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905e0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493651b0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31b220>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31acb0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319ae0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318e50>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319d20>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f3349365330>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319b40>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364910>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a2905b0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31acb0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364a00>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319060>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319870>: <pyeda.boolalg.bdd.BDDNode object at 0x7f3349364a00>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319ed0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31af50>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31bb50>: <pyeda.boolalg.bdd.BDDNode object at 0x7f33493659f0>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a31af50>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a293580>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334a319060>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a244580>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>, <pyeda.boolalg.bdd.BDDNode object at 0x7f334a318fd0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>, <pyeda.boolalg.bdd.BDDNode object at 0x7f33493659f0>: <pyeda.boolalg.bdd.BDDNode object at 0x7f334936d150>}\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "zp_q is None",
+     "ename": "KeyError",
+     "evalue": "<pyeda.boolalg.bdd.BDDNode object at 0x7f40318cfc10>",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m zp_q is None\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[58], line 73\u001b[0m\n\u001b[1;32m     71\u001b[0m compute_F(bdd_mono)\n\u001b[1;32m     72\u001b[0m compute_zp(bdd_mono, \u001b[38;5;28mlen\u001b[39m(bdd_vars_mono))\n\u001b[0;32m---> 73\u001b[0m \u001b[43mfind_incl_mono\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbdd_mono\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbdd_vars_mono\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[58], line 48\u001b[0m, in \u001b[0;36mfind_incl_mono\u001b[0;34m(bdd, c)\u001b[0m\n\u001b[1;32m     46\u001b[0m zp_q \u001b[38;5;241m=\u001b[39m zp(q, l(c, u))\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m u \u001b[38;5;129;01mis\u001b[39;00m zp_q:\n\u001b[0;32m---> 48\u001b[0m     q \u001b[38;5;241m=\u001b[39m \u001b[43msup\u001b[49m\u001b[43m[\u001b[49m\u001b[43mq\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     49\u001b[0m     zp_q \u001b[38;5;241m=\u001b[39m zp(q, l(c, u))\n\u001b[1;32m     51\u001b[0m candidates\u001b[38;5;241m.\u001b[39madd(zp_q) \u001b[38;5;66;03m# zp can return None\u001b[39;00m\n",
+      "\u001b[0;31mKeyError\u001b[0m: <pyeda.boolalg.bdd.BDDNode object at 0x7f40318cfc10>"
      ]
     }
    ],
    "source": [
-    "net_mono = layers2nn(layers_nn)\n",
-    "for i, params in enumerate(net_mono.parameters()):\n",
-    "    if i%2==0:\n",
-    "        params.data = abs(params.data)\n",
-    "    else:\n",
-    "        params.data = -10 * abs(params.data)\n",
+    "layers_nn_mono = [15, 1]\n",
     "\n",
-    "bdd_mono, bdd_vars_mono = compile_nn(net_mono)\n",
-    "if bdd_mono.is_one() or bdd_mono.is_zero():\n",
-    "    print(\"BDD is 0 or 1\")\n",
-    "    sys.exit(0)\n",
+    "while True:\n",
+    "    net_mono = layers2nn(layers_nn_mono)\n",
+    "    for i, params in enumerate(net_mono.parameters()):\n",
+    "        if i%2==0:\n",
+    "            params.data = abs(params.data)\n",
+    "        else:\n",
+    "            params.data = -10 * abs(params.data)\n",
+    "\n",
+    "    bdd_mono, bdd_vars_mono = compile_nn(net_mono)\n",
+    "    if not bdd_mono.is_one() and not bdd_mono.is_zero():\n",
+    "        break\n",
     "\n",
     "memo_F = dict()\n",
     "def compute_F(bdd): # ZDD algo -> adapt to BDD (?)\n",
@@ -666,9 +654,9 @@
     "def find_incl_mono(bdd, c):\n",
     "    special_nodes = set(memo_zp[bdd.node].values()) # nodes reached by 0-edge from the root\n",
     "    nodes, _ = init_find_incl(bdd, c)\n",
-    "    nodes[0] = dict() # simplify code for P0 and P1\n",
+    "    nodes[0] = dict() # simplify code for P0 and P1 computation\n",
     "    \n",
-    "    sup = dict() # correct init ?\n",
+    "    sup = dict() # init ??\n",
     "\n",
     "    for k in range(1, c+1):\n",
     "        for u in set(nodes[k]) - special_nodes:\n",
