AsymBCELoss + high/low f1 score

--- a/datasets/loan/compare.ipynb
+++ b/datasets/loan/compare.ipynb
@@ -136,6 +136,16 @@
     "        b = a*self.p\n",
     "        loss = torch.where(dif < 0, b, a)\n",
     "        loss = torch.mean(loss)\n",
+    "        return loss\n",
+    "    \n",
+    "class AsymBCELoss(nn.Module):\n",
+    "    def __init__(self, p=2):\n",
+    "        super(AsymBCELoss, self).__init__()\n",
+    "        self.p = p\n",
+    "\n",
+    "    def forward(self, input, label):\n",
+    "        loss = -(label*torch.log(input) + self.p*(1-label)*torch.log(1-input))\n",
+    "        loss = torch.mean(loss)\n",
     "        return loss"
    ]
   },
@@ -149,7 +159,7 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        \n",
-    "        hl1 = 25\n",
+    "        hl1 = 50\n",
     "\n",
     "        self.l1 = nn.Linear(25,hl1)\n",
     "        self.a1 = StepActivation()\n",
@@ -204,6 +214,9 @@
     "    \n",
     "    def detach(self):\n",
     "        self.x = self.x.detach()\n",
+    "        self.hi = self.hi.detach()\n",
+    "        self.nn = self.nn.detach()\n",
+    "        self.lo = self.lo.detach()\n",
     "        return self\n",
     "\n",
     "class BoundNet(nn.Module):\n",
@@ -223,11 +236,8 @@
     "        xhi = self.hi(x)\n",
     "        xnn = self.nn(x)\n",
     "        xlo = self.lo(x)\n",
-    "        xhir = torch.round(xhi)\n",
-    "        xnnr = torch.round(xnn)\n",
-    "        xlor = torch.round(xlo)\n",
     "        x = torch.where(xhi>0.5, xhi, torch.where(xlo<0.5, xlo, xnn))\n",
-    "        # x = tor(tand(tnot(txor(xhir, xlor)), xhir), tand(txor(xhir, xlor), xnnr)).float()\n",
+    "        \n",
     "        x = BoundNetResults(x, xhi, xnn, xlo)\n",
     "\n",
     "        return x\n",
@@ -341,8 +351,8 @@
     "    boundnet = BoundNet()\n",
     "\n",
     "    # A loss function for each nn\n",
-    "    loss_hi_nn = AsymMSELoss(100)\n",
-    "    loss_lo_nn = AsymMSELoss(.001)\n",
+    "    loss_hi_nn = AsymBCELoss(100)\n",
+    "    loss_lo_nn = AsymBCELoss(.001)\n",
     "    loss_nn_tr = nn.BCELoss()\n",
     "\n",
     "    # One optimizer for all parameters\n",
@@ -468,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -476,35 +486,45 @@
      "output_type": "stream",
      "text": [
       "Fold 1 :\n",
-      "\tF1 score\tBoundNet\t0.700\t|\tSimpleNet\t0.950 \n",
-      "\tCoverage\tHigh\t0.474\tLow\t0.000\n",
+      "\tF1 score\tBoundNet       0.757\t|\tSimpleNet      1.000 \n",
+      "\t        \tHigh           0.800\t|\tLow            0.756 \n",
+      "\tCoverage\tHigh           0.737\t|\tLow            0.500\n",
       "Fold 2 :\n",
-      "\tF1 score\tBoundNet\t0.762\t|\tSimpleNet\t1.000 \n",
-      "\tCoverage\tHigh\t0.684\tLow\t0.000\n",
+      "\tF1 score\tBoundNet       0.727\t|\tSimpleNet      1.000 \n",
+      "\t        \tHigh           0.737\t|\tLow            0.720 \n",
+      "\tCoverage\tHigh           0.737\t|\tLow            0.278\n",
       "Fold 3 :\n",
-      "\tF1 score\tBoundNet\t0.714\t|\tSimpleNet\t1.000 \n",
-      "\tCoverage\tHigh\t0.632\tLow\t0.333\n",
+      "\tF1 score\tBoundNet       0.700\t|\tSimpleNet      1.000 \n",
+      "\t        \tHigh           0.688\t|\tLow            0.691 \n",
+      "\tCoverage\tHigh           0.579\t|\tLow            0.056\n",
       "Fold 4 :\n",
-      "\tF1 score\tBoundNet\t0.650\t|\tSimpleNet\t0.973 \n",
-      "\tCoverage\tHigh\t0.526\tLow\t0.222\n",
+      "\tF1 score\tBoundNet       0.706\t|\tSimpleNet      1.000 \n",
+      "\t        \tHigh           0.645\t|\tLow            0.766 \n",
+      "\tCoverage\tHigh           0.526\t|\tLow            0.444\n",
       "Fold 5 :\n",
-      "\tF1 score\tBoundNet\t0.600\t|\tSimpleNet\t0.971 \n",
-      "\tCoverage\tHigh\t0.389\tLow\t0.211\n",
+      "\tF1 score\tBoundNet       0.650\t|\tSimpleNet      0.973 \n",
+      "\t        \tHigh           0.684\t|\tLow            0.694 \n",
+      "\tCoverage\tHigh           0.722\t|\tLow            0.263\n",
       "Fold 6 :\n",
-      "\tF1 score\tBoundNet\t0.714\t|\tSimpleNet\t0.973 \n",
-      "\tCoverage\tHigh\t0.611\tLow\t0.211\n",
+      "\tF1 score\tBoundNet       0.615\t|\tSimpleNet      1.000 \n",
+      "\t        \tHigh           0.556\t|\tLow            0.680 \n",
+      "\tCoverage\tHigh           0.556\t|\tLow            0.211\n",
       "Fold 7 :\n",
-      "\tF1 score\tBoundNet\t0.571\t|\tSimpleNet\t1.000 \n",
-      "\tCoverage\tHigh\t0.389\tLow\t0.263\n",
+      "\tF1 score\tBoundNet       0.789\t|\tSimpleNet      1.000 \n",
+      "\t        \tHigh           0.727\t|\tLow            0.720 \n",
+      "\tCoverage\tHigh           0.667\t|\tLow            0.263\n",
       "Fold 8 :\n",
-      "\tF1 score\tBoundNet\t0.718\t|\tSimpleNet\t0.971 \n",
-      "\tCoverage\tHigh\t0.611\tLow\t0.105\n",
+      "\tF1 score\tBoundNet       0.629\t|\tSimpleNet      1.000 \n",
+      "\t        \tHigh           0.581\t|\tLow            0.708 \n",
+      "\tCoverage\tHigh           0.500\t|\tLow            0.316\n",
       "Fold 9 :\n",
-      "\tF1 score\tBoundNet\t0.595\t|\tSimpleNet\t0.973 \n",
-      "\tCoverage\tHigh\t0.500\tLow\t0.000\n",
+      "\tF1 score\tBoundNet       0.711\t|\tSimpleNet      0.973 \n",
+      "\t        \tHigh           0.714\t|\tLow            0.679 \n",
+      "\tCoverage\tHigh           0.833\t|\tLow            0.056\n",
       "Fold 10 :\n",
-      "\tF1 score\tBoundNet\t0.727\t|\tSimpleNet\t0.923 \n",
-      "\tCoverage\tHigh\t0.500\tLow\t0.000\n"
+      "\tF1 score\tBoundNet       0.732\t|\tSimpleNet      0.973 \n",
+      "\t        \tHigh           0.778\t|\tLow            0.735 \n",
+      "\tCoverage\tHigh           0.778\t|\tLow            0.278\n"
      ]
     }
    ],
@@ -516,10 +536,13 @@
     "for i, ((b, t), (s, _)) in enumerate(zip(bnet_split_res, snet_split_res)):\n",
     "    b_f1_score = metrics.f1_score(t, b, average=\"binary\")\n",
     "    s_f1_score = metrics.f1_score(t, s, average=\"binary\")\n",
+    "    hi_f1_score = metrics.f1_score(t, b.hi, average=\"binary\")\n",
+    "    lo_f1_score = metrics.f1_score(t, b.lo, average=\"binary\")\n",
     "    hi_cov_score = cov_score(t, b.hi)[1]\n",
     "    lo_cov_score = cov_score(t, b.lo)[0]\n",
-    "    print(f\"Fold {i+1} :\\n\\tF1 score\\tBoundNet\\t{b_f1_score:.3f}\\t|\\tSimpleNet\\t{s_f1_score:.3f}\",\n",
-    "          f\"\\n\\tCoverage\\tHigh\\t{hi_cov_score:.3f}\\tLow\\t{lo_cov_score:.3f}\")"
+    "    print(f\"Fold {i+1} :\\n\\tF1 score\\t{'BoundNet':<15}{b_f1_score:.3f}\\t|\\t{'SimpleNet':<15}{s_f1_score:.3f}\",\n",
+    "          f\"\\n\\t        \\t{'High':<15}{hi_f1_score:.3f}\\t|\\t{'Low':<15}{lo_f1_score:.3f}\",\n",
+    "          f\"\\n\\tCoverage\\t{'High':<15}{hi_cov_score:.3f}\\t|\\t{'Low':<15}{lo_cov_score:.3f}\")"
    ]
   }
  ],
