correction + format results

--- a/datasets/loan/compare.ipynb
+++ b/datasets/loan/compare.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A"
+    "## Imports"
    ]
   },
   {
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from matplotlib.colors import LinearSegmentedColormap\n",
+    "from collections import OrderedDict \n",
     "from sklearn import metrics, model_selection\n",
     "from torch.autograd import Function\n",
     "from torch.optim import Adam\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B"
+    "## Metrics, Activations, Loss and Networks definitions"
    ]
   },
   {
@@ -89,9 +89,9 @@
     "        x_train, x_test = X[train_index], X[test_index]\n",
     "        y_train, y_test = Y[train_index], Y[test_index]\n",
     "\n",
-    "        model = train_func(x_train, y_train, **kw_train)\n",
+    "        model, y_pred = train_func(x_train, y_train, **kw_train)\n",
     "        model.eval()\n",
-    "        yield model(x_test).detach(), y_test\n",
+    "        yield y_pred.detach().round(), y_train, model(x_test).detach(), y_test\n",
     "\n",
     "def tnot(a): return torch.logical_not(a)\n",
     "def tor(a,b): return torch.logical_or(a,b)\n",
@@ -144,7 +144,7 @@
     "        self.p = p\n",
     "\n",
     "    def forward(self, input, label):\n",
-    "        loss = -(label*torch.log(input) + self.p*(1-label)*torch.log(1-input))\n",
+    "        loss = -torch.maximum(label*torch.log(input) + self.p*(1-label)*torch.log(1-input), torch.full(input.size(), -100))\n",
     "        loss = torch.mean(loss)\n",
     "        return loss"
    ]
@@ -159,19 +159,17 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        \n",
-    "        hl1 = 50\n",
+    "        hl1 = 10\n",
     "\n",
-    "        self.l1 = nn.Linear(25,hl1)\n",
-    "        self.a1 = StepActivation()\n",
-    "        self.l2 = nn.Linear(hl1,1)\n",
-    "        self.a2 = StepActivation()\n",
-    "        \n",
+    "        self.nn = nn.Sequential(OrderedDict([\n",
+    "            ('l1', nn.Linear(25,hl1)),\n",
+    "            ('a1', StepActivation()),\n",
+    "            ('l2', nn.Linear(hl1,1)),\n",
+    "            ('a2', StepActivation())\n",
+    "        ]))        \n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.l1(x)\n",
-    "        x = self.a1(x)\n",
-    "        x = self.l2(x)\n",
-    "        x = self.a2(x)\n",
+    "        x = self.nn(x)\n",
     "\n",
     "        return x\n",
     "\n",
@@ -217,6 +215,13 @@
     "        self.hi = self.hi.detach()\n",
     "        self.nn = self.nn.detach()\n",
     "        self.lo = self.lo.detach()\n",
+    "        return self\n",
+    "    \n",
+    "    def round(self, *args):\n",
+    "        self.x = self.x.round(*args)\n",
+    "        self.hi = self.hi.round(*args)\n",
+    "        self.nn = self.nn.round(*args)\n",
+    "        self.lo = self.lo.round(*args)\n",
     "        return self\n",
     "\n",
     "class BoundNet(nn.Module):\n",
@@ -268,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## C"
+    "## Data processing"
    ]
   },
   {
@@ -338,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## D"
+    "## Training functions"
    ]
   },
   {
@@ -376,14 +381,7 @@
     "        loss_lo.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "    return boundnet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## E"
+    "    return boundnet, y_pred"
    ]
   },
   {
@@ -403,23 +401,23 @@
     "\n",
     "    for _ in range(max_epoch):\n",
     "        simplenet.train()\n",
-    "        y_pred = simplenet(x_train)\n",
+    "        y_pred = simplenet(x)\n",
     "        \n",
     "        # loss in comparison with true y values\n",
-    "        loss = loss_net(y_pred, y_train)\n",
+    "        loss = loss_net(y_pred, y)\n",
     "\n",
     "        simplenet.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    \n",
-    "    return simplenet"
+    "    return simplenet, y_pred"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## F"
+    "## Network evaluation"
    ]
   },
   {
@@ -485,46 +483,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1 :\n",
-      "\tF1 score\tBoundNet       0.757\t|\tSimpleNet      1.000 \n",
-      "\t        \tHigh           0.800\t|\tLow            0.756 \n",
-      "\tCoverage\tHigh           0.737\t|\tLow            0.500\n",
-      "Fold 2 :\n",
-      "\tF1 score\tBoundNet       0.727\t|\tSimpleNet      1.000 \n",
-      "\t        \tHigh           0.737\t|\tLow            0.720 \n",
-      "\tCoverage\tHigh           0.737\t|\tLow            0.278\n",
-      "Fold 3 :\n",
-      "\tF1 score\tBoundNet       0.700\t|\tSimpleNet      1.000 \n",
-      "\t        \tHigh           0.688\t|\tLow            0.691 \n",
-      "\tCoverage\tHigh           0.579\t|\tLow            0.056\n",
-      "Fold 4 :\n",
-      "\tF1 score\tBoundNet       0.706\t|\tSimpleNet      1.000 \n",
-      "\t        \tHigh           0.645\t|\tLow            0.766 \n",
-      "\tCoverage\tHigh           0.526\t|\tLow            0.444\n",
-      "Fold 5 :\n",
-      "\tF1 score\tBoundNet       0.650\t|\tSimpleNet      0.973 \n",
-      "\t        \tHigh           0.684\t|\tLow            0.694 \n",
-      "\tCoverage\tHigh           0.722\t|\tLow            0.263\n",
-      "Fold 6 :\n",
-      "\tF1 score\tBoundNet       0.615\t|\tSimpleNet      1.000 \n",
-      "\t        \tHigh           0.556\t|\tLow            0.680 \n",
-      "\tCoverage\tHigh           0.556\t|\tLow            0.211\n",
-      "Fold 7 :\n",
-      "\tF1 score\tBoundNet       0.789\t|\tSimpleNet      1.000 \n",
-      "\t        \tHigh           0.727\t|\tLow            0.720 \n",
-      "\tCoverage\tHigh           0.667\t|\tLow            0.263\n",
-      "Fold 8 :\n",
-      "\tF1 score\tBoundNet       0.629\t|\tSimpleNet      1.000 \n",
-      "\t        \tHigh           0.581\t|\tLow            0.708 \n",
-      "\tCoverage\tHigh           0.500\t|\tLow            0.316\n",
-      "Fold 9 :\n",
-      "\tF1 score\tBoundNet       0.711\t|\tSimpleNet      0.973 \n",
-      "\t        \tHigh           0.714\t|\tLow            0.679 \n",
-      "\tCoverage\tHigh           0.833\t|\tLow            0.056\n",
-      "Fold 10 :\n",
-      "\tF1 score\tBoundNet       0.732\t|\tSimpleNet      0.973 \n",
-      "\t        \tHigh           0.778\t|\tLow            0.735 \n",
-      "\tCoverage\tHigh           0.778\t|\tLow            0.278\n"
+      "Fold   1 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.789    |    SimpleNet      0.722    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
+      "\t              High           0.500    |    Low            0.766    ||    High           0.850    |    Low            0.668\n",
+      "\tCoverage      High           0.368    |    Low            0.444    ||    High           0.739    |    Low            0.012\n",
+      "Fold   2 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.769    |    SimpleNet      0.718    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.690    |    Low            0.679    ||    High           0.755    |    Low            0.665\n",
+      "\tCoverage      High           0.526    |    Low            0.000    ||    High           0.606    |    Low            0.000\n",
+      "Fold   3 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.700    |    SimpleNet      0.541    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
+      "\t              High           0.571    |    Low            0.679    ||    High           0.854    |    Low            0.665\n",
+      "\tCoverage      High           0.421    |    Low            0.000    ||    High           0.745    |    Low            0.000\n",
+      "Fold   4 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.629    |    SimpleNet      0.588    ||    BoundNet       0.975    |    SimpleNet      0.975\n",
+      "\t              High           0.483    |    Low            0.679    ||    High           0.900    |    Low            0.665\n",
+      "\tCoverage      High           0.368    |    Low            0.000    ||    High           0.818    |    Low            0.000\n",
+      "Fold   5 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.700    |    SimpleNet      0.615    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.706    |    Low            0.692    ||    High           0.904    |    Low            0.668\n",
+      "\tCoverage      High           0.667    |    Low            0.158    ||    High           0.825    |    Low            0.000\n",
+      "Fold   6 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.683    |    SimpleNet      0.611    ||    BoundNet       0.973    |    SimpleNet      0.973\n",
+      "\t              High           0.563    |    Low            0.655    ||    High           0.733    |    Low            0.668\n",
+      "\tCoverage      High           0.500    |    Low            0.000    ||    High           0.578    |    Low            0.000\n",
+      "Fold   7 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.732    |    SimpleNet      0.732    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
+      "\t              High           0.581    |    Low            0.655    ||    High           0.793    |    Low            0.668\n",
+      "\tCoverage      High           0.500    |    Low            0.000    ||    High           0.657    |    Low            0.000\n",
+      "Fold   8 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.727    |    SimpleNet      0.682    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
+      "\t              High           0.649    |    Low            0.667    ||    High           0.806    |    Low            0.668\n",
+      "\tCoverage      High           0.667    |    Low            0.158    ||    High           0.675    |    Low            0.000\n",
+      "Fold   9 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.762    |    SimpleNet      0.703    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.684    |    Low            0.667    ||    High           0.863    |    Low            0.667\n",
+      "\tCoverage      High           0.722    |    Low            0.000    ||    High           0.759    |    Low            0.000\n",
+      "Fold  10 :                                  Valid                          ||                          Train                      \n",
+      "\tF1 score      BoundNet       0.714    |    SimpleNet      0.514    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.600    |    Low            0.706    ||    High           0.806    |    Low            0.667\n",
+      "\tCoverage      High           0.500    |    Low            0.167    ||    High           0.675    |    Low            0.000\n"
      ]
     }
    ],
@@ -533,16 +531,27 @@
     "bnet_split_res = cross_valid(x_train, y_train, train_boundnet, skf)\n",
     "snet_split_res = cross_valid(x_train, y_train, train_simplenet, skf)\n",
     "\n",
-    "for i, ((b, t), (s, _)) in enumerate(zip(bnet_split_res, snet_split_res)):\n",
-    "    b_f1_score = metrics.f1_score(t, b, average=\"binary\")\n",
-    "    s_f1_score = metrics.f1_score(t, s, average=\"binary\")\n",
-    "    hi_f1_score = metrics.f1_score(t, b.hi, average=\"binary\")\n",
-    "    lo_f1_score = metrics.f1_score(t, b.lo, average=\"binary\")\n",
-    "    hi_cov_score = cov_score(t, b.hi)[1]\n",
-    "    lo_cov_score = cov_score(t, b.lo)[0]\n",
-    "    print(f\"Fold {i+1} :\\n\\tF1 score\\t{'BoundNet':<15}{b_f1_score:.3f}\\t|\\t{'SimpleNet':<15}{s_f1_score:.3f}\",\n",
-    "          f\"\\n\\t        \\t{'High':<15}{hi_f1_score:.3f}\\t|\\t{'Low':<15}{lo_f1_score:.3f}\",\n",
-    "          f\"\\n\\tCoverage\\t{'High':<15}{hi_cov_score:.3f}\\t|\\t{'Low':<15}{lo_cov_score:.3f}\")"
+    "for i, ((bt, tt, bv, tv), (st, _, sv, _)) in enumerate(zip(bnet_split_res, snet_split_res)):\n",
+    "    prompts = []\n",
+    "    for b, s, t in [[bt, st, tt],[bv, sv, tv]]:\n",
+    "        b_f1_score = metrics.f1_score(t, b, average=\"binary\")\n",
+    "        s_f1_score = metrics.f1_score(t, s, average=\"binary\")\n",
+    "        prompts.append(f\"{'BoundNet':<15}{b_f1_score:.3f}{'|':^9}{'SimpleNet':<15}{s_f1_score:.3f}\")\n",
+    "\n",
+    "        hi_f1_score = metrics.f1_score(t, b.hi, average=\"binary\")\n",
+    "        lo_f1_score = metrics.f1_score(t, b.lo, average=\"binary\")\n",
+    "        prompts.append(f\"{'High':<15}{hi_f1_score:.3f}{'|':^9}{'Low':<15}{lo_f1_score:.3f}\")\n",
+    "\n",
+    "        hi_cov_score = cov_score(t, b.hi)[1]\n",
+    "        lo_cov_score = cov_score(t, b.lo)[0]\n",
+    "        prompts.append(f\"{'High':<15}{hi_cov_score:.3f}{'|':^9}{'Low':<15}{lo_cov_score:.3f}\")\n",
+    "\n",
+    "    sep_tv = f\"{'||':^10}\"\n",
+    "    print(f\"Fold {i+1:3} :            {'Valid':^49}{sep_tv}{'Train':^49}\",\n",
+    "          f\"\\tF1 score      {prompts[3]}{sep_tv}{prompts[0]}\",\n",
+    "          f\"\\t              {prompts[4]}{sep_tv}{prompts[1]}\",\n",
+    "          f\"\\tCoverage      {prompts[5]}{sep_tv}{prompts[2]}\",\n",
+    "          sep='\\n')"
    ]
   }
  ],
